# ILASP_robotics

./: .gitignore  README.md  pegring_scene.ttt
dvrk_task_msgs/: CMakeLists.txt  package.xml
dvrk_task_msgs/msg/: ActionArray.msg  ActionRequestFiner.msg  BoolArray.msg  CloudArray.msg  ILPExample.msg  IntArray.msg  ObstArray.msg
dvrk_task_msgs/srv/: Dmp.srv
offline_ilasp/: cluster.py  extract.las  extract.las:Zone.Identifier  extract_results.txt  grasp.las  grasp_results.txt  move_center.las  move_center_results.txt  move_peg.las  move_peg_results.txt  move_ring.las  move_ring_results.txt  release.las  release_results.txt
offline_ilasp/blue_red/: coeffs.npy  fluents.txt  fluents.txt:Zone.Identifier
offline_ilasp/fail_test/: coeffs.npy  fluents.txt  fluents.txt:Zone.Identifier
offline_ilasp/full/: coeffs.npy  fluents.txt  fluents.txt:Zone.Identifier
peg_and_ring/: CMakeLists.txt  README.md  package.xml
peg_and_ring/config/: camera_parameters.txt  camera_parameters_old.txt  endoscope-2_5cm-left.yaml  endoscope-2_5cm-right.yaml  pegs_record_21_02.txt
peg_and_ring/config/visualizer/: ars.rviz
peg_and_ring/include/: pcl_conversion_util.h  peg_ring.hpp  registration_pipeline.h  segmentation.hpp
peg_and_ring/launch/: correspondenceRos.launch  dvrkBringup.launch  giovanni_launch.launch  gpd_panda.launch  joy_teleop_launch.launch  load_environment.launch  panda_easyhandeye.launch  panda_hand_geometry.launch  panda_peg_ring.launch  peg_ring.launch  real_peg_ring.launch  registration_pipeline.launch  test_combiner.launch  test_convertPCD.launch  test_handeye.launch  test_registration.launch  visualization_launch.launch  vrep_panda_peg_ring.launch
peg_and_ring/models/: base_14_02_center.stl  base_14_02_center_new.stl  base_18_02.stl  ring.pcd  ring.ply  ring127.pcd  ring127.ply  scene_red.pcd  scene_red.ply
peg_and_ring/rviz/: panda_peg_ring_rviz.rviz  peg_ring_rviz.rviz
peg_and_ring/script/: PSM_pose.py  calibration_test.txt  convert_pcd.py  geometry_grasp.py  grasp_select.py  joy_teleop.py  keyboardControl.py  peg_registrator.py  save_data.py  test_grasping.py  test_opencv.py  visualization_test.py  worldPoseConverter.py
peg_and_ring/src/: converter_pcd.cpp  correspondenceRos.cpp  pcl_conversion_util.cpp  peg_ring.cpp  registration_pipeline.cpp  vrep_combiner.cpp
peg_and_ring/vrep_scenes/: dVRK-realSense.ttt  dVRK-training_altair_pegs.ttt  franka_real_base.ttt  moveit_franka_real_base.ttt
robot_control/: CMakeLists.txt  cut.npz  package.xml
robot_control/config/: ars_demo.json  pegring.json
robot_control/launch/: dvrk_console.launch  framework.launch  fsm.launch
robot_control/rviz_config/: MTML-PSM1-MTMR-PSM2.rviz
robot_control/scripts/: al_param.py  control.py  cs.py  demo_ars_learn_dmp.py  derivative_matrices.py  dmp_cartesian.py  dmp_poses.py  dmp_quaternion.py  dmp_server.py  exponential_integration.py  motion_pegring.py  obstacle.py  obstacle_ellipse.py  quaternion.py  rotation_matrix.py  sensing_pegring.py
robot_control/srv/: ComputeDmp.srv
task_reasoning/: CMakeLists.txt  package.xml  setup.py
task_reasoning/asp/: pegring_sequential.lp
task_reasoning/ilasp/: grasp.las  move_center.las  move_peg.las  move_ring.las  release.las
task_reasoning/scripts/: ASP_manager.py  ILP_pegring.py  fsm.py  fsm_solution.py  gringoParser.py  reset_examples.py
util_pkg/: CMakeLists.txt  ReadME.md  package.xml
util_pkg/include/: boost_discrete_distribution_sampler.hpp  io_utils.hpp  metric_map.hpp  misc.hpp  needle_semantic_segmentation.h  ood_visualization.hpp  pcd_utils.hpp  tabletop_color_analyzer.hpp
util_pkg/launch/: ars_experiments.launch  ars_visualizer.launch  chessboard_calib.launch  color_segmentation.launch  combine_depth_rgb.launch  combiner_combiner.launch  coppeliaGlobalFrame.launch  coppeliaGlobalMarker.launch  elas.launch  evaluate_calibration.launch  extract_images.launch  globalMarker.launch  global_peg_ring.launch  needle_semantic_seg.launch  stereo_proc.launch  stewart_color.launch
util_pkg/rviz_scenes/: ars.rviz  aruco_global_frame.rviz  evaluate_calibration.rviz
util_pkg/scripts/: aruco_global_frame.py  convert_PSMs.py  cv_click_image.py  dot_recognition.py  fix_time.py  images2topic.py  old_global_frame.py  record_bag.sh  resample_rosbag.py  save_image.py  save_psm_pose.py  test_rs_depth.py
util_pkg/src/: chessboard_rec.cpp  color_segmentation.cpp  combine_depth_rbg.cpp  converter_pcl.cpp  createMesh.cpp  evaluate_calibration.cpp  misc.cpp  needle_semantic_segmentation.cpp  ood_visualization.cpp  pcd_utils.cpp  tabletop_color_analyzer.cpp  vrep_combiner.cpp
util_pkg/templates/: realsense.yaml
util_pkg/vrep_model/: panda_model.ttm
util_pkg/vrep_scenes/: cameraCalibration.ttt  global_frame.ttt  panda_frankaEmika.ttt  panda_sonda_ee.ttt  stereo_global_frame.ttt
