<?xml version="1.0"?>
<package>
  <name>dvrk_task_msgs</name>
  <version>1.6.0</version>
  <description>util msgs for autonomous task with dvrk</description>

  <maintainer email="damiele.meli@univr.it">Daniele Meli</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
