<?xml version="1.0"?>
<package>
  <name>robot_control</name>
  <version>1.6.0</version>
  <description>The robot_control package for autonomous task with dvrk</description>
  <license>None</license>

  <maintainer email="damiele.meli@univr.it">Daniele Meli</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>dvrk_task_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dvrk_robot</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>dvrk_task_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dvrk_robot</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
