<?xml version="1.0"?>
<package>
  <name>util_pkg</name>
  <version>0.0.0</version>
  <description>The util_pkg package</description>

 <maintainer email="andrea.roberti@univr.it">Andrea Roberti</maintainer>
 <license>BSD</license>

 <author email="andrea.roberti@univr.it">Andrea Roberti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ann_catkin</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ann_catkin</run_depend>

</package>
